# unixcmd

./: .gitignore  CLAUDE.md  CMakeLists.txt  LINUX_DEPLOYMENT.md  Makefile  README.md  Rakefile  aux.rb  changelog.txt  cmd.rb  conanfile.py  configure  dirview.rb  fileinfodlg.rb  gnome-get-filetype-icon  gnome-get-filetype-icon.c  index.html  panel.rb  params.json  test.rb  test2.rb  test3.rb  unixcmd.gemspec  unixcmd.rb  version.rb
.github/workflows/: build-lin.yml  build-mac.yml  build-win.yml  build.yml
cp/: gcp.rb  libcp.rb  libgcp.rb
data/forms/: copydlg.glade  mkdirdlg.glade  movedlg.glade  removedlg.glade
ext/gnome_get_filetype_icon/: extconf.rb  gnome_get_filetype_icon.c
gtk/: CMakeLists.txt  main.c  main_window.c  main_window.h
lib/: aux.rb  cmd.rb  config.rb  copydlg.rb  dirview.rb  panel.rb  removedlg.rb  version.rb
lib/unixcmd/: .aux.rb.swp  .cmd.rb.swp  .dirview.rb.swp  .panel.rb.swp  .version.rb.swp  aux.rb  cmd.rb  copydlg.rb  dirview.rb  mkdirdlg.rb  movedlg.rb  panel.rb  version.rb
src/: CMakeLists.txt  about_dialog.cpp  about_dialog.h  application.cpp  application.h  copy_dialog.cpp  copy_dialog.h  create_directory_dialog.cpp  create_directory_dialog.h  directory_model.cpp  directory_model.h  directory_status_bar.cpp  directory_status_bar.h  directory_view.cpp  directory_view.h  directory_view_style.cpp  directory_view_style.h  directory_widget.cpp  directory_widget.h  double_panel_splitter.cpp  double_panel_splitter.h  file_processing_dialog.cpp  file_processing_dialog.h  main.cpp  main_window.cpp  main_window.h  move_copy_dialog.cpp  move_copy_dialog.h  processing_dialog.cpp  processing_dialog.h
src/android/: AndroidManifest.xml  build.gradle
src/android/res/values/: strings.xml
src/android/src/app/qt_app/: QnActivity.java
src/cmake/: distribution.cmake  install.cmake  ios.cmake  linux.cmake  linux_deploy.cmake.in  macos.cmake  utils.cmake
src/functions/common/: file_processing_dialog.cpp  file_processing_dialog.h
src/functions/copy_move/: dialog.cpp  dialog.h
src/functions/create_directory/: dialog.cpp  dialog.h
src/ios/: Info.plist
src/qml/: about_dialog.qml  copy_dialog.qml  create_directory_dialog.qml  file_processing_dialog.qml  main.qml  move_copy_dialog.qml
src/resources/: Info.plist.in  unixcmd.icns
